# polybtcbot

./: .env.example  .gitignore  CHANGELOG.md  README.md  SETUP.md  btcbot.db-wal  calibration.py  pyproject.toml  redeem.py
btcbot/: cli.py  config.py  engine.py  execution.py  market_discovery.py  models.py  paper.py  regime.py  risk.py  signal.py
btcbot/feeds/: binance_ws.py  chainlink.py  polymarket_ws.py
btcbot/storage/: db.py  repo.py  schema.sql
btcbot/web/: app.py  routes.py
btcbot/web/static/: app.css
btcbot/web/templates/: base.html  dashboard.html  history.html  stats.html  trades.html
btcbot/web/templates/partials/: live.html  recent_trades.html
docs/superpowers/plans/: 2026-04-10-bracket-orders.md  2026-04-10-stats-page.md
docs/superpowers/specs/: 2026-04-09-regime-aware-defense-design.md  2026-04-10-bracket-orders-design.md  2026-04-10-stats-page-design.md
tests/: conftest.py  test_engine.py  test_risk.py  test_signal.py  test_stats.py  test_web_stats.py
